                   information being displayed in the Mesh UI link:https://github.com/gentics/mesh/issues/345[#345]

icon:check[] Java Rest Client: Fix webroot requests never returns when containing whitespaces.

icon:check[] GraphQL: Fixed language parameter in nodes query method was ignored in some cases. link:https://github.com/gentics/mesh/issues/365[#365]

[[v0.17.3]]
== 0.17.3 (15.03.2018)

icon:check[] UI: Restrict nodes to certain schema if allow is set in node list fields.

[[v0.17.2]]
== 0.17.2 (13.03.2018)

icon:plus[] Docker: A new volume location for the `config` directory has been added. 
            You can now use the `/config` folder to mount your configuration files.

icon:plus[] Core: The Vert.x library has been downgraded to 3.5.0 due to a regression which could cause requests to not be handled by the HTTP Server.

[[v0.17.1]]
== 0.17.1 (08.03.2018)

icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.33

icon:plus[] Core: The core Vert.x library was updated to version 3.5.1

icon:plus[] Config: It is now possible to configure the elasticsearch start-up timeout via the `search.startupTimeout` field in the `mesh.yml` or via the `MESH_ELASTICSEARCH_STARTUP_TIMEOUT` environment variable.

icon:plus[] Search: The reindex endpoint will now execute the reindex operation asynchronously.

icon:plus[] Search: Two new reindex specific events have been added: `mesh.search.reindex.failed`, `mesh.search.reindex.completed`.

icon:plus[] REST: The `GET /api/v1/search/status` endpoint response has been updated. The `reindexRunning` flag has been added.

icon:check[] Config: Fixed a bug which prevented optional boolean environment variables (e.g. `MESH_HTTP_CORS_ENABLE_ENV`) from being handled correctly.

icon:check[] Core: It is now possible to change the listType of a list field in a schema via the Rest-API.

icon:check[] Core: The server will now shutdown if an error has been detected during start-up.
